using appropriate admonitions where possible.

--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -47,7 +47,7 @@ Choose AWS as the Cloud vendor while creating your new subscription. While creat
 
 ![image](chatapp4.png)
 
-:::info TIP
+:::tip
 You don't need to create an AWS account for setting up your Redis database. Redis Enterprise Cloud on AWS is a fully managed database-as-a-service trusted by thousands of customers for high performance, infinite scalability, true high availability, and best-in-class support.
 :::
 
