--- a/docs/create/azure/portal/index-azure-portal.mdx
+++ b/docs/create/azure/portal/index-azure-portal.mdx
@@ -43,7 +43,11 @@ sudo redis-cli -h demos.redis.cache.windows.net -p 6379
 demos.redis.cache.windows.net:6379>
 ```
 
-Please note that you can have multiple clients connected to a Redis database at the same time. The above Redis client command might require a password if you have setup authentication in your Redis configuration file. You can insert data to Redis using the `SET` command and then fetch it back with the `GET` command. You can also run the Redis `INFO` command to get the statistics about the health of the Redis server (for example, memory usage, Redis server load etc).
+:::tip
+
+You can have multiple clients connected to a Redis database at the same time. The above Redis client command might require a password if you have setup authentication in your Redis configuration file. You can insert data to Redis using the `SET` command and then fetch it back with the `GET` command. You can also run the Redis `INFO` command to get the statistics about the health of the Redis server (for example, memory usage, Redis server load etc).
+
+:::
 
 ### Resources
 
