--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -43,7 +43,8 @@ In this tutorial, you will learn how to deploy a simple Redis rate limiting appl
 
 Visit [developer.redis.com/create/rediscloud/](https://developer.redis.com/create/rediscloud/) and create [a free Redis Enterprise Cloud account](https://redis.com/try-free/). Once you complete the signup tutorial, you will be provided with the database endpoint URL, port and password. Save these for future reference.
 
-:::info TIP
+:::tip
+
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
@@ -219,7 +220,12 @@ Last updated on 2022-02-19T02:50:03.100357Z by ajeet.raina@redis.com:
 ### Step 8. Access your app
 
 Wait for the build and deploy to complete. When finished, a message with unique URL will be displayed.
-Please note that the URL shown in your case will be different from the one shown below:
+
+:::note
+
+The URL shown in your case will be different from the one shown below.
+
+:::
 
 Open [https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app/](https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app/) and access your app.
 
