--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -25,7 +25,7 @@ Some of the notable benefits of Heroku include:
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free)
 
-:::info TIP
+:::tip
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
