--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -18,7 +18,7 @@ Here's a quickstart guide to deploy Ruby apps on Heroku using Redis. We will be 
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free).
 
-:::info TIP
+:::tip
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
@@ -103,7 +103,12 @@ To https://git.heroku.com/thawing-shore-07338.git
 ### Step 8. Accessing the application
 
 Open https://thawing-shore-07338.herokuapp.com/ to access your application on the browser.
-Please note that the Web URL is unique, hence it will be different in your case.
+
+:::note
+
+The Web URL is unique, hence it will be different in your case.
+
+:::
 
 ![heroku](heroku_leaderboard_ruby.png)
 
