--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -218,7 +218,7 @@ Kubernetes makes physical storage devices available to your cluster in the form 
 
 An Operator is basically an application-specific controller that can help you manage a Kubernetes application. It is a way to package, run, and maintain a Kubernetes application. It is designed to extend the capabilities of Kubernetes, and also simplify application management. This is especially useful for stateful applications, which include persistent storage and other elements external to the application, and may require extra work to manage and maintain.
 
-:::info TIP
+:::tip
 The Operator Framework is an open source project that provides developer and runtime Kubernetes tools, enabling you to accelerate the development of an operator.
 [Learn more about operator framework here](https://operatorframework.io/)
 :::
