--- a/docs/create/redis-stack/index-redis-stack.mdx
+++ b/docs/create/redis-stack/index-redis-stack.mdx
@@ -65,7 +65,7 @@ The Redis OM client libraries let you use the document modeling, indexing, and q
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-:::info TIP
+:::tip
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
@@ -77,7 +77,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 For the cloud provider, select your preferred cloud.
 Select the region of your choice and then click "Let's start free".
 
-:::info TIP
+:::tip
 If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database".
 :::
@@ -178,7 +178,7 @@ This will install all Redis and Redis Stack binaries. How you run these binaries
  🍺  redis-stack was successfully installed!
 ```
 
-:::info TIP
+:::tip
 
 If this is the first time you’ve installed Redis on your system, then all Redis Stack binaries will be installed and on your path. On M1 Macs, this assumes that `/opt/homebrew/bin` is in your path. On Intel-based Macs, `/usr/local/bin` should be in the path.
 
@@ -288,7 +288,7 @@ If you don’t have redis-cli installed locally, you can run it from the Docker 
  docker exec -it redis-stack redis-cli
 ```
 
-:::info TIP
+:::tip
 The `docker run` command above also exposes RedisInsight on port 8001. You can use RedisInsight by pointing your browser to http://localhost:8001.
 :::
 
