--- a/docs/develop/python/redis-om/index-redis-om.mdx
+++ b/docs/develop/python/redis-om/index-redis-om.mdx
@@ -75,8 +75,12 @@ features.
 You can also use the official Redis Docker image, which is hosted on [Docker
 Hub](https://hub.docker.com/_/redis).
 
-**NOTE**: We'll talk about how to actually start Redis with Docker when we
-discuss _running_ Redis later in this guide.
+:::note
+
+We'll talk about how to actually start Redis with Docker when we discuss _running_ Redis later in this guide.
+
+:::
+
 
 ## Recommended: RediSearch and RedisJSON
 
