--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -11,7 +11,12 @@ import Authors from '@site/src/theme/Authors';
 <Authors frontMatter={frontMatter} />
 
 Real-time chat app is an online communication channel that allows you to conduct real-time conversations. More and more developers are tapping into the power of Redis as it is extremely fast & due to its support for variety of rich data structure such as Lists, Sets, Sorted Sets, Hashes etc. Redis comes along with a Pub/Sub messaging feature functionality that allows developers to scale the backend by spawning multiple server instances.
+
+:::info
+
 Please note that this code is open source. You can find the link at the end of this tutorial.
+
+:::
 
 <div class="text--center">
   <iframe
@@ -26,7 +31,11 @@ Please note that this code is open source. You can find the link at the end of t
 
 In this tutorial, we will see how to develop real time messaging apps with Flask, Socket.IO and Redis. This example uses Redis Pub/sub feature combined with websockets for implementing the real time chat app communication between client and server.
 
+:::info
+
 Please note that this code is open source and implements the basic features of a live chat app. You can find the link at the end of this tutorial.
+
+:::
 
 ### Step 1. Prerequisites
 
