--- a/docs/howtos/moviesdatabase/install/index-install.mdx
+++ b/docs/howtos/moviesdatabase/install/index-install.mdx
@@ -22,7 +22,11 @@ Let's use Docker for now.
    redislabs/redisearch:2.0.2
 ```
 
-_Note: The container will automatically be removed when it exits (`--rm` parameter)._
+:::note
+
+The container will automatically be removed when it exits (`--rm` parameter).
+
+:::
 
 You have now a Redis instance running with RediSearch installed, let's discover the basics.
 
