--- a/docs/howtos/moviesdatabase/manage/index.manage.mdx
+++ b/docs/howtos/moviesdatabase/manage/index.manage.mdx
@@ -72,4 +72,8 @@ Dropping an index does not impact the indexed hashes, this means that the movies
    4) "movie:11005"
 ```
 
-_Note: You can delete the indexed document/hashes by adding the `DD` parameter._
+:::note
+
+You can delete the indexed document/hashes by adding the `DD` parameter.
+
+:::
