--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -16,7 +16,7 @@ RedisGraph is a Redis module that enables enterprises to process any kind of con
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-:::info TIP
+:::tip
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
@@ -27,7 +27,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 Choose your preferred cloud vendor. Select the region and then click "Let's start free" to create your free database automatically.
 
-:::info TIP
+:::tip
 If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database" option shown in the image.
 :::
