--- a/docs/howtos/redisjson/json-using-redisearch/jsonindex-document/index-jsonindex-document.mdx
+++ b/docs/howtos/redisjson/json-using-redisearch/jsonindex-document/index-jsonindex-document.mdx
@@ -140,7 +140,11 @@ In this example, we return the result of the JSON Path expression $.user.hp .
     2) "paul.john@example.com"
 ```
 
-Please Note: It is not possible to index JSON object and JSON arrays.
+:::info
+
+It is not possible to index JSON object and JSON arrays.
+
+:::
 
 ```
  {
