--- a/docs/howtos/redistimeseries/using-python/index-usingpython.mdx
+++ b/docs/howtos/redistimeseries/using-python/index-usingpython.mdx
@@ -18,8 +18,10 @@ RedisTimeSeries is a Redis module that allows Redis to be used as a fast in-memo
 
 ## Python Client for RedisTimeSeries
 
-:::note TIP
+:::tip
+
 As of redis-py 4.0.0, the redistimeseries-py library is deprecated. It's features have been merged into redis-py. Please either install it from pypy or the repo.
+
 :::
 
 Follow the steps below to get started with RedisTimeSeries with Python:
@@ -28,7 +30,8 @@ Follow the steps below to get started with RedisTimeSeries with Python:
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-:::info TIP
+:::tip
+
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
@@ -39,9 +42,11 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 Choose your preferred cloud vendor. Select the region and then click "Let's start free" to create your free database automatically.
 
-:::info TIP
+:::tip
+
 If you want to create a custom database with your preferred name and type of redis,
 click "Create a custom database" option shown in the image.
+
 :::
 
 ![create database ](images/select_cloud_vendor.png)
