--- a/docs/howtos/socialnetwork/index-socialnetwork.mdx
+++ b/docs/howtos/socialnetwork/index-socialnetwork.mdx
@@ -156,7 +156,11 @@ We can now remove the docker instance and move on to building the web applicatio
 
 After understanding how the index works, let’s build a minimal backend API in NodeJS that will allow us to create a user, and query for matching users.
 
-Please note that this is just an example, and we’re not providing proper validation or error handling, nor other features required for the backend (e.g. authentication).
+:::note
+
+This is just an example, and we’re not providing proper validation or error handling, nor other features required for the backend (e.g. authentication).
+
+:::
 
 ### Redis client
 
