--- a/docs/modules/redisearch/index-redisearch.mdx
+++ b/docs/modules/redisearch/index-redisearch.mdx
@@ -117,7 +117,13 @@ You can also search “action” movies that contain “star” in the index (in
    4) "1980"
 ```
 
-The FT.SEARCH command is the base command to search your database, it has many options and is associated with a powerful and rich query syntax that you can find in the documentation. (Note: You can also use the index to do data aggregation using the FT.AGGREGATE command.)
+The FT.SEARCH command is the base command to search your database, it has many options and is associated with a powerful and rich query syntax that you can find in the documentation.
+
+:::tip
+
+You can also use the index to do data aggregation using the FT.AGGREGATE command.
+
+:::
 
 ### Next Steps
 
