--- a/docs/operate/provisioning/terraform/index-terraform.mdx
+++ b/docs/operate/provisioning/terraform/index-terraform.mdx
@@ -116,7 +116,11 @@ Within the block body (between { and }) are query constraints defined by the dat
 
 In order to set up authentication with the Redis Enterprise Cloud provider, a programmatic API key must be generated for Redis Enterprise Cloud. The Redis Enterprise Cloud documentation contains the most up-to-date instructions for creating and managing your key(s) and IP access.
 
-Please note that Flexible and Annual Redis Enterprise Cloud subscriptions can leverage a RESTful API that permits operations against a variety of resources, including servers, services, and related infrastructure. The REST API is not supported for Fixed or Free subscriptions.
+:::tip
+
+Flexible and Annual Redis Enterprise Cloud subscriptions can leverage a RESTful API that permits operations against a variety of resources, including servers, services, and related infrastructure. The REST API is not supported for Fixed or Free subscriptions.
+
+:::
 
 ```
  provider "rediscloud" { } # Example resource configuration
@@ -298,7 +302,12 @@ Plan: 3 to add, 0 to change, 0 to destroy.
 
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 
-Note: You didn't use the -out option to save this plan, so Terraform can't guarantee to take exactly these actions if you run "terraform apply" now.
+:::note
+
+You didn't use the -out option to save this plan, so Terraform can't guarantee to take exactly these actions if you run "terraform apply" now.
+
+:::
+
 ```
 
 ### Step 6: Execute the action
