--- a/docs/operate/redis-at-scale/index-redis-at-scale.mdx
+++ b/docs/operate/redis-at-scale/index-redis-at-scale.mdx
@@ -68,11 +68,11 @@ Our goal is to give you all the information you need to run Redis at scale, in w
   docker and docker-compose installed
 - A git client and access to clone repos in Github. Some exercises will come from the following repository: https://github.com/redislabs-training/ru301
 
-<strong>
-  Note: This repo contains sample demonstrations of Redis running in various
-  scaled configurations, and is not directly correlated with all of the
-  exercises in this course. See the specific exercise instructions for usage.
-</strong>
+:::note
+
+This repo contains sample demonstrations of Redis running in various scaled configurations, and is not directly correlated with all of the exercises in this course. See the specific exercise instructions for usage.
+
+:::
 
 ## Assumptions
 
