--- a/docs/operate/redis-at-scale/observability/data-points-in-redis/index-data-points-in-redis.mdx
+++ b/docs/operate/redis-at-scale/observability/data-points-in-redis/index-data-points-in-redis.mdx
@@ -149,8 +149,7 @@ Some examples of possible alerts that could be setup for a given metric:
 
 :::note
 
-This is not an exhaustive list, but just to give you an idea of how the
-  metrics in INFO could be used.
+This is not an exhaustive list, but just to give you an idea of how the metrics in INFO could be used.
 
 :::
 
@@ -158,7 +157,12 @@ This is not an exhaustive list, but just to give you an idea of how the
 
 The redis-cli client has some built-in options that allow you to pull some real-time latency and stats data.
 
-Note: these are not available as commands from Redis but as options in redis-cli.
+
+:::note
+
+These are not available as commands from Redis but as options in redis-cli.
+
+:::
 
 <strong>Latency options:</strong>
 
