--- a/docs/operate/redis-at-scale/observability/identifying-issues/index-identifying-issues.mdx
+++ b/docs/operate/redis-at-scale/observability/identifying-issues/index-identifying-issues.mdx
@@ -172,7 +172,11 @@ OK
 1616541276.052331 [0 127.0.0.1:57098] "set" "user:2398423hu" "KutMo"
 ```
 
-**Note: because `MONITOR` streams back all commands, its use comes at a cost. It has been known to reduce performance by up to 50% so use with caution!**
+:::caution
+
+Since `MONITOR` streams back all commands, its use comes at a cost. It has been known to reduce performance by up to 50% so use with caution!
+
+:::
 
 ## Setting up and using the Redis Log File
 
