--- a/docs/operate/redis-at-scale/scalability/exercise-1/index-exercise-1.mdx
+++ b/docs/operate/redis-at-scale/scalability/exercise-1/index-exercise-1.mdx
@@ -129,10 +129,12 @@ In the next step we join the new primary shard to the cluster with the `add-node
 redis-cli --cluster add-node 127.0.0.1:7006 127.0.0.1:7000
 ```
 
-<strong>
-  Note: The Redis commands use the term “Nodes” for what we call “Shards” in
-  this training, so a command named “add-node” would mean “add a shard”.
-</strong>
+
+:::note
+
+The Redis commands use the term “Nodes” for what we call “Shards” in this training, so a command named “add-node” would mean “add a shard”.
+
+:::
 
 ## Step 9
 
