--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -43,7 +43,11 @@ Install the Redis server by running the following command:
 $ redis-server
 ```
 
-Please note that you don't need to restart the Redis service.
+:::note
+
+You don't need to restart the Redis service.
+
+:::
 
 ### Step 3: Interacting with Redis Client
 
