--- a/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
+++ b/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
@@ -16,7 +16,7 @@ Heroku is a platform as a service (PaaS) that enables developers to build, run, 
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free)
 
-:::info TIP
+:::tip
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
