--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -26,7 +26,7 @@ Redis Enterprise Cloud is a fully managed cloud service by Redis. Built for mode
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free)
 
-:::info TIP
+:::tip
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
