--- a/docs/create/redis-functions/index-redis-functions.mdx
+++ b/docs/create/redis-functions/index-redis-functions.mdx
@@ -35,7 +35,11 @@ Alternatively, you can spin up a Docker container with Redis Stack:
 $ docker run -p 6379:6379 --name redis-7.0 -it --rm redis/redis-stack:7.0.0-RC4
 ```
 
-> Note: In the rest of this tutorial we’ll use the `$` character to indicate that the command needs to be run on the command prompt and `redis-cli>` to indicate the same for a redis-cli prompt.\_
+:::note
+
+In the rest of this tutorial we’ll use the `$` character to indicate that the command needs to be run on the command prompt and `redis-cli>` to indicate the same for a redis-cli prompt.
+
+:::
 
 ### Warm-Up
 
