--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -102,9 +102,13 @@ You can install and run Grafana using the official Docker image.
 
 #### Step 1. Install Docker
 
-The first step is to install docker for your operating system. Run the docker version command in a terminal window to make sure that docker is installed correctly.
+The first step is to install docker for your operating system. Run the `docker version` command in a terminal window to make sure that docker is installed correctly.
 
-Note - On Windows and Mac, install docker version 18.03 or higher. You can run docker version to find out your docker version.
+:::note
+
+On Windows and Mac, install docker version 18.03 or higher. You can run `docker version` to find out your docker version.
+
+:::
 
 #### Step 2. Run Grafana Docker container
 
