--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -43,7 +43,12 @@ You can connect to Redis server using the `redis-cli` command like this:
 ```
 
 The above command will make a connection to the Redis server. It will then present a prompt that allows you to run Redis commands.
-Please note that you can connect to Redis server using multiple clients.
+
+:::note
+
+You can connect to Redis server using multiple clients.
+
+:::
 
 ## Step 2: Download RedisInsight
 
