--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -74,7 +74,7 @@ This will install all Redis and Redis Stack binaries. How you run these binaries
  🍺  redis-stack was successfully installed!
 ```
 
-:::info TIP
+:::tip
 
 If this is the first time you’ve installed Redis on your system, then all Redis Stack binaries be installed and accessible on your path. On M1 Macs, this assumes that `/opt/homebrew/bin` is in your path. On Intel-based Macs, `/usr/local/bin` should be in the path.
 
