--- a/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
+++ b/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
@@ -145,8 +145,13 @@ In this example, we return the result of the JSON Path expression $.user.hp .
     2) "paul.john@example.com"
 ```
 
-Please Note: It is not possible to index JSON object and JSON arrays.
-To be indexed, a JSONPath expression must return a single scalar value (string or number). If the JSONPath expression returns an object or an array, it will be ignored.
+:::info
+
+It is not possible to index JSON object and JSON arrays. To be indexed, a JSONPath expression must return a single scalar value (string or number). If the JSONPath expression returns an object or an array, it will be ignored.
+
+:::
+
+
 
 Given the following document:
 
