--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,13 +25,18 @@ Check out our upcoming events:
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                            |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------ |
 | Thursday, November 10   | 4:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Redis University Office Hours][officehrs]                                      |
+| Thursday, November 10   | 6:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                      |
+| Monday, November 14     | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Thursday, November 17   | 10:30 AM UTC| [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                              |
 | Thursday, November 17   | 4:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Redis University Office Hours][officehrs]                                      |
 | Friday, November 18     | 6:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                                  |
+| Monday, November 21     | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Thursday, November 24   | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                      |
 | Friday, November 25     | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                  |
+| Monday, November 28     | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Thursday, December 1    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                      |
 | Friday, December 2      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                  |
+| Monday, December 5      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Thursday, December 8    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                      |
 | Friday, December 9      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                  |
 | Thursday, December 15   | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                      |
