--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,11 +25,11 @@ Check out our upcoming events:
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
 | Thursday, November 17   | 4:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Redis University Office Hours][officehrs]                                                           |
-| Friday, November 18     | 6:00 PM UTC | [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][twitch]                                                                       |
+| Friday, November 18     | 6:00 PM UTC | [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]                        | [This Week On Discord][twitch]                                                                       |
 | Monday, November 21     | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
 | Thursday, November 24   | 10:30 AM UTC| [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Synchronized Counting with Keyspace Notifications - Episode 2][twitch] |
 | Thursday, November 24   | 4:00 PM UTC | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Redis University Office Hours][officehrs]                                                           |
-| Friday, November 25     | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
+| Friday, November 25     | 6:00 PM UTC | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [This Week On Discord][twitch]                                                                       |
 | Monday, November 28     | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
 | Thursday, December 1    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
 | Friday, December 2      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
